--- a/Todo en uno.csproj
+++ b/Todo en uno.csproj
@@ -59,7 +59,6 @@
     <Compile Include="Forms\AgregarProducto.Designer.cs">
       <DependentUpon>AgregarProducto.cs</DependentUpon>
     </Compile>
-    <Compile Include="Clases\Orden.cs" />
     <Compile Include="Clases\Venta.cs" />
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
@@ -70,8 +69,14 @@
     <Compile Include="Forms\FormVenta.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\Inventario.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\FormVenta.Designer.cs">
       <DependentUpon>FormVenta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Inventario.Designer.cs">
+      <DependentUpon>Inventario.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\Configuracion.cs" />
     <Compile Include="Program.cs" />
@@ -85,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormVenta.resx">
       <DependentUpon>FormVenta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Inventario.resx">
+      <DependentUpon>Inventario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -112,7 +120,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Db\" />
-    <Folder Include="Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
