--- a/Todo en uno.csproj
+++ b/Todo en uno.csproj
@@ -78,6 +78,12 @@
     <Compile Include="Forms\Inventario.Designer.cs">
       <DependentUpon>Inventario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ReporteDiario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ReporteDiario.Designer.cs">
+      <DependentUpon>ReporteDiario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Simulacro.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +106,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Inventario.resx">
       <DependentUpon>Inventario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ReporteDiario.resx">
+      <DependentUpon>ReporteDiario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Simulacro.resx">
       <DependentUpon>Simulacro.cs</DependentUpon>
