Implementa reporte diario y reporte mensual
Aparte crea metodos nuevos en venta para poder realuzar estos calculos

--- a/Todo en uno.csproj
+++ b/Todo en uno.csproj
@@ -90,11 +90,12 @@
     </Compile>
     <Compile Include="Forms\NuevaNota.Designer.cs">
       <DependentUpon>NuevaNota.cs</DependentUpon>
-    <Compile Include="Forms\ReporteDiario.cs">
+    </Compile>
+    <Compile Include="Forms\Reporte.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\ReporteDiario.Designer.cs">
-      <DependentUpon>ReporteDiario.cs</DependentUpon>
+    <Compile Include="Forms\Reporte.Designer.cs">
+      <DependentUpon>Reporte.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Simulacro.cs">
       <SubType>Form</SubType>
@@ -124,8 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\NuevaNota.resx">
       <DependentUpon>NuevaNota.cs</DependentUpon>
-    <EmbeddedResource Include="Forms\ReporteDiario.resx">
-      <DependentUpon>ReporteDiario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Reporte.resx">
+      <DependentUpon>Reporte.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Simulacro.resx">
       <DependentUpon>Simulacro.cs</DependentUpon>
