--- a/Todo en uno.csproj
+++ b/Todo en uno.csproj
@@ -61,6 +61,12 @@
       <DependentUpon>AgregarProducto.cs</DependentUpon>
     </Compile>
     <Compile Include="Clases\Venta.cs" />
+    <Compile Include="Forms\Configuracion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Configuracion.Designer.cs">
+      <DependentUpon>Configuracion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Fiado.cs">
       <SubType>Form</SubType>
     </Compile>
