--- a/Todo en uno.csproj
+++ b/Todo en uno.csproj
@@ -61,11 +61,11 @@
       <DependentUpon>AgregarProducto.cs</DependentUpon>
     </Compile>
     <Compile Include="Clases\Venta.cs" />
-    <Compile Include="Forms\Configuracion.cs">
+    <Compile Include="Forms\FormConfiguracion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Configuracion.Designer.cs">
-      <DependentUpon>Configuracion.cs</DependentUpon>
+    <Compile Include="Forms\FormConfiguracion.Designer.cs">
+      <DependentUpon>FormConfiguracion.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Fiado.cs">
       <SubType>Form</SubType>
@@ -73,11 +73,11 @@
     <Compile Include="Forms\Fiado.Designer.cs">
       <DependentUpon>Fiado.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Form1.cs">
+    <Compile Include="Forms\Home.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\Home.Designer.cs">
+      <DependentUpon>Home.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormVenta.cs">
       <SubType>Form</SubType>
@@ -120,8 +120,8 @@
     <EmbeddedResource Include="Forms\Fiado.resx">
       <DependentUpon>Fiado.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Home.resx">
+      <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormVenta.resx">
       <DependentUpon>FormVenta.cs</DependentUpon>
