--- a/Todo en uno.csproj
+++ b/Todo en uno.csproj
@@ -61,11 +61,11 @@
       <DependentUpon>AgregarProducto.cs</DependentUpon>
     </Compile>
     <Compile Include="Clases\Venta.cs" />
-    <Compile Include="Forms\Configuracion.cs">
+    <Compile Include="Forms\FormConfiguracion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Configuracion.Designer.cs">
-      <DependentUpon>Configuracion.cs</DependentUpon>
+    <Compile Include="Forms\FormConfiguracion.Designer.cs">
+      <DependentUpon>FormConfiguracion.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Fiado.cs">
       <SubType>Form</SubType>
@@ -117,6 +117,9 @@
       <DependentUpon>AgregarProducto.cs</DependentUpon>
     </EmbeddedResource>
     <Compile Include="Settings.cs" />
+    <EmbeddedResource Include="Forms\FormConfiguracion.resx">
+      <DependentUpon>FormConfiguracion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Fiado.resx">
       <DependentUpon>Fiado.cs</DependentUpon>
     </EmbeddedResource>
