--- a/Todo en uno.csproj
+++ b/Todo en uno.csproj
@@ -61,6 +61,12 @@
       <DependentUpon>AgregarProducto.cs</DependentUpon>
     </Compile>
     <Compile Include="Clases\Venta.cs" />
+    <Compile Include="Forms\Borrado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Borrado.Designer.cs">
+      <DependentUpon>Borrado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormConfiguracion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -117,6 +123,9 @@
       <DependentUpon>AgregarProducto.cs</DependentUpon>
     </EmbeddedResource>
     <Compile Include="Settings.cs" />
+    <EmbeddedResource Include="Forms\Borrado.resx">
+      <DependentUpon>Borrado.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormConfiguracion.resx">
       <DependentUpon>FormConfiguracion.cs</DependentUpon>
     </EmbeddedResource>
